--- a/Guided Clustering (Seurat)/DESCRIPTION
+++ b/Guided Clustering (Seurat)/DESCRIPTION
@@ -5,4 +5,4 @@ The pipeline for guided clustering using Seurat is split into 3 main steps:
 2. Guided clustering.R - Performing guided clustering using Seurat R package
 3. Output.R - Visualising guided clustering results and identification of heart cell-types
 
-The complete steps for scRNA-seq clustering can be found in Compiled scRNA-seq clustering steps.R.
+The complete steps for scRNA-seq clustering can be found in Compiled clustering steps.R.
